Fix bug side drawer button disappear on iPad, correct pagetitle alignment on small devices in french page

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -288,7 +288,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 767px) {
   .header {
     padding-left: 10vw;
     padding-right: 10vw;
