--- a/styles/componentstyles/PageTitle.module.css
+++ b/styles/componentstyles/PageTitle.module.css
@@ -64,9 +64,8 @@
 @media (min-width: 320px) {
   .pagetitlelogocontent {
     width: 80%;
-    margin-top: 4rem;
     display: flex;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
   }
@@ -97,6 +96,7 @@
     width: 100%;
     height: 30%;
   }
+
   .pagetitletextcontent {
     width: 100%;
     margin-top: 3rem;
@@ -133,5 +133,12 @@
 @media (min-width: 1500px) {
   .pagetitle {
     height: 50rem;
+  }
+}
+
+@media (max-width: 600px){
+  .pagetitletextcontentnologo:lang(fr) {
+    font-size: 2.5rem;
+    text-align: center;
   }
 }
